added CSS styling

--- a/src/App.css
+++ b/src/App.css
@@ -10,7 +10,8 @@
   margin: 50px;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  font-family: 'Lucida Sans';
+  font-size: calc(50px + 2vmin);
   color: white;
-  box-shadow: 1px 1px 3px 1px;
+  box-shadow: 2px 2px 6px 2px;
 }
