--- a/src/components/Form.js/Form.css
+++ b/src/components/Form.js/Form.css
@@ -1,3 +1,6 @@
+* {
+    box-sizing: border-box;
+}
 span {
     color: rgb(252, 191, 242);
     font-size: 20px;
@@ -25,3 +28,46 @@ article {
     -webkit-appearance: none;
 }
 
+section {
+    flex-grow: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+    
+  section > article {
+    display: flex;
+    justify-content: space-between;
+    min-width: 17.25rem;
+    color: white;
+    margin: 0.1rem;
+    background-color: #737495;
+  }
+    
+  article > div {
+    padding: 0.5rem;
+    flex-direction: column;
+    display: flex;
+  }
+  
+  article > div:nth-child(1) {
+    flex-grow: 1;
+    flex-direction: column;
+    display: flex;
+  }
+    
+  input,
+  select {
+    width: 100%;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 1rem;
+    font-weight: bold;
+    padding: 0.4rem;
+    color: #f17d80;
+    border: 2px solid #737495;
+    border-radius: 0;
+    outline: none;
+    -webkit-appearance: none;
+  }
+    
